; ModuleID = '/home/carl/AnghaBench/redis/src/extr_networking.c_stopThreadedIOIfNeeded.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_networking.c_stopThreadedIOIfNeeded.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@server = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@io_threads_active = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @stopThreadedIOIfNeeded() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 1), align 4
  %4 = call i32 @listLength(i32 %3)
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 0), align 4
  %6 = icmp eq i32 %5, 1
  br i1 %6, label %7, label %8

7:                                                ; preds = %0
  store i32 1, i32* %1, align 4
  br label %20

8:                                                ; preds = %0
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 0), align 4
  %11 = mul nsw i32 %10, 2
  %12 = icmp slt i32 %9, %11
  br i1 %12, label %13, label %19

13:                                               ; preds = %8
  %14 = load i64, i64* @io_threads_active, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %13
  %17 = call i32 (...) @stopThreadedIO()
  br label %18

18:                                               ; preds = %16, %13
  store i32 1, i32* %1, align 4
  br label %20

19:                                               ; preds = %8
  store i32 0, i32* %1, align 4
  br label %20

20:                                               ; preds = %19, %18, %7
  %21 = load i32, i32* %1, align 4
  ret i32 %21
}

declare dso_local i32 @listLength(i32) #1

declare dso_local i32 @stopThreadedIO(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
